# daddy-learning

./: .gitignore  README.md  pyproject.toml
data/ingestion/: artists.txt
reggaeton/: constants.py  ingestion.py  preprocessor.py  training.py  write.py
tests/: ingestion_unit_test.py  preprocessor_unit_test.py  test_reggaeton.py
