[tool.poetry]
name = "reggaeton"
version = "0.1.0"
description = ""
authors = ["jacopoRufini <jacoporufini97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "4.6.0"
polyglot = "16.7.4"
lyricsgenius = "1.8.6"
keras = "2.3.1"
tensorflow = "2.2.0"
dill = "^0.3.3"
pyicu = "^2.6"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
